flats - draft examples.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,145 @@
     <!-- wrap1html ENDS HERE -->
 
     <div id="wrap2layout">
-      <h2> CSS Grid</h2>
+      <h2>Floats</h2>
+      <div>
+        <article>
+            <h3>Example 1</h3>
+            <p>No floats</p><hr>
+            <div class=" group">
+              <div class="exampleBox">
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam voluptatibus eius molestiae impedit facilis,
+                dolore tenetur similique explicabo provident, quaerat corrupti cupiditate fuga, dolorum.</p>
+            </div>
+        </article>
+        <article>
+            <h3>Example 2</h3>
+            <p>Red box is floated to the left.</p>
+            <div class="group">
+              <div class="exampleBox floatLeft"></div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam voluptatibus eius molestiae impedit facilis,
+                dolore tenetur similique explicabo provident, quaerat corrupti cupiditate fuga, dolorum.</p>
+            </div>
+        </article>
+
+        <article>
+            <h3>Example 3</h3>
+            <p>Two red boxes are floated to the right.</p>
+            <div class="group">
+              <div class="exampleBox floatRight"></div>
+              <div class="exampleBox floatRight"></div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam voluptatibus eius molestiae impedit facilis,
+                dolore tenetur similique explicabo provident, quaerat corrupti cupiditate fuga, dolorum.</p>
+            </div>
+        </article>
+        <article>
+            <h3>Example 4</h3>
+            <p>Starndart behaviour, no floats are used there.</p>
+            <div class="exampleBackground">
+              <div class="exampleBox"></div>
+            </div>
+        </article>
+        <article>
+            <h3>Example 5</h3>
+            <p> Red box is floated right. No float clearfix is used on parent. </p>
+            <div class="exampleBackground">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam voluptatibus eius molestiae impedit facilis,
+                dolore tenetur similique explicabo provident, quaerat corrupti cupiditate fuga, dolorum.</p>
+              <div class="exampleBox floatRight"></div>
+            </div>
+        </article>
+        <article>
+            <h3>Example 5</h3>
+            <p> Red box is floated right. No float clearfix is used on parent. </p>
+            <div class="exampleBackground">
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+            </div>
+            <div class="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, totam officia officiis nulla id soluta itaque vero provident rerum commodi quisquam, asperiores obcaecati delectus blanditiis esse. Dolore tenetur hic eum sequi rem, officia sunt odio nam delectus nobis accusantium aut consequuntur deleniti, sapiente, alias ea quia harum eligendi aliquam deserunt.</p>
+            </div>
+        </article>
+        <article>
+            <h3>Example 5</h3>
+            <p> Red box is floated right. No float clearfix is used on parent. </p>
+            <div class="exampleBackground group">
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+              <div class="exampleBox floatLeft"></div>
+            </div>
+            <div class="">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, totam officia officiis nulla id soluta itaque vero provident rerum commodi quisquam, asperiores obcaecati delectus blanditiis esse. Dolore tenetur hic eum sequi rem, officia sunt odio nam delectus nobis accusantium aut consequuntur deleniti, sapiente, alias ea quia harum eligendi aliquam deserunt.</p>
+            </div>
+        </article>
+      </div>
+
+      <h2>FlexBox</h2>
+      <div>
+        <article>
+          <div class="">
+            <h3>Example 1</h3>
+            <p></p>
+            <div>
+              <p>Box_1</p>
+            </div>
+            <div>
+              <p>Box_2</p>
+            </div>
+            <div>
+              <p>Box_3</p>
+            </div>
+            <div>
+              <p>Box_4</p>
+            </div>
+          </div>
+        </article>
+      </div>
+
+      <h2>CSS Grid</h2>
       <div>
         <article>
           <p>The 1st example shows somewhat default look of divs within a div, without any special CSS grid layout coding.</p>
@@ -285,7 +423,7 @@
           </div>
         </article>
 
-        <article class="">
+        <article>
           <p>In this 2nd example, you can see the divs have been split into two. Fractional units have been used. The fraction is 2fr-3fr or 40%-60%. Fractions are preferred over static units such as: <strong> percentages, px, em or rem</strong> because
             you will have layout problems if you use padding, margins or gaps with static units.</p>
 
@@ -320,7 +458,7 @@
           </div>
         </article>
 
-        <article class="">
+        <article>
           <p>In this 3rd example you can see 4 divs, but the grid system uses 3 fr declarations - <strong>1fr-2fr-1fr</strong>. So, even if you add 10 more divs within the main div the system will keep the layout go on exactly the same as the first row.</p>
           <div class="message-mobile">
             <p>To view this example, please open this page on a device with a larger screen.</p>
@@ -353,7 +491,7 @@
           </div>
         </article>
 
-        <article class="">
+        <article>
 
           <p>In this 4th example you can see 6 column layout, however, repeat subfunction has been used here to demonstrate a simplified method, if you need one.</p>
 
@@ -391,7 +529,8 @@
             </div>
           </div>
         </article>
-        <article class="">
+
+        <article>
           <p>In this 5th example, you can see the minmax height subfunction used with parameters of 100px and auto. This means that the minimum height of a box will be 100px and if the content overflows the height of the box will adjust itself automatically,
             as it can be seen below.</p>
           <p> You can also see nested divs with their own grid system. Visually they have a gap value, also some padding and border. You can also see that they can be aligned any way you want using the appropriate coding.</p>
@@ -423,9 +562,8 @@
                 <br>&rbrace;
               </p>
               <p>
-                &sol;&sol; Div 1 - Doesn't have any special coding. <br> <br> &sol;&sol; Div 2 to 7 - The CSS coding aligns items to particular space of their layout boundaries. <br>
-                &sol;&sol; For example, justify-items is capable of aligning the items vertically and align-items does the opposite, it aligns items horizontally. <br>
-                &sol;&sol; Also, you can use 3 different parameters on both, those include start, center, and end.
+                &sol;&sol; Div 1 - Doesn't have any special coding. <br> <br> &sol;&sol; Div 2 to 7 - The CSS coding aligns items to particular space of their layout boundaries. <br> &sol;&sol; For example, justify-items is capable of aligning the items
+                vertically and align-items does the opposite, it aligns items horizontally. <br> &sol;&sol; Also, you can use 3 different parameters on both, those include start, center, and end.
               </p>
               <p>
                 .nestedDiv2 &lbrace;<br> &emsp;justify&dash;items&colon; start&semi;
@@ -452,8 +590,7 @@
                 <br>&rbrace;
               </p>
               <p>
-                &sol;&sol; The final 3 examples use classes on the parent divs, to move the divs to a particular spot within their layout boundary. <br>
-                &sol;&sol; No nested divs have been used here. <br>
+                &sol;&sol; The final 3 examples use classes on the parent divs, to move the divs to a particular spot within their layout boundary. <br> &sol;&sol; No nested divs have been used here. <br>
               </p>
               <p>
                 .exampleDiv1 &lbrace;<br> &emsp;align&dash;items&colon; start&semi;
@@ -581,7 +718,7 @@
           </div>
         </article>
 
-        <article class="">
+        <article>
           <p>As you can see below in this 6th example. This is perhaps the most powerful feature of the CSS Grid system. This separates it from flexbox and floats. As you can see you can stretch individual boxes in pretty much any direction within the box
             model. All that being said as you can see the boxes automatically resize each other to keep within their boundaries.</p>
           <div class="message-mobile">
@@ -591,19 +728,17 @@
             <p>CSS:</p>
             <div class="indent">
               <p>
-                &sol;&sol; For this final example, we set the look of the gird. We use fractional units as 1-2-1. <br>
-                &sol;&sol; We also set the minimum height of the divs as 100px, which is expandable if it needs to be.
+                &sol;&sol; For this final example, we set the look of the gird. We use fractional units as 1-2-1. <br> &sol;&sol; We also set the minimum height of the divs as 100px, which is expandable if it needs to be.
               </p>
               <p>
                 .grid&lowbar;6 &lbrace; <br> &emsp;grid&dash;template&dash;columns&colon; 1fr 2fr 1fr&semi; <br> &emsp;grid&dash;auto&dash;rows&colon; minmax&lpar;100px, auto&rpar;&semi;
                 <br> &rbrace;
               </p>
               <p>
-                &sol;&sol; This is perhaps the most sophisticated feature of the CSS grid. The ability to overlap. <br>
-                &sol;&sol; This can be done by imagining the whole layout as a bunch of different lines.<br>
-                &sol;&sol; To see an example of these lines please click <a href="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia02.hongkiat.com%2Fmoving-css-grid-items%2Fgrid-lines.jpg&f=1">here</a>. <br>
-                &sol;&sol; Once you imagine your layout as having those lines, you can code different objects to overlap their boundaries and go into other objects while having those overlapped objects simply be moved automatically. <br>
-                &sol;&sol; To see it clearly please look at the below example and the picture from the above link.
+                &sol;&sol; This is perhaps the most sophisticated feature of the CSS grid. The ability to overlap. <br> &sol;&sol; This can be done by imagining the whole layout as a bunch of different lines.<br> &sol;&sol; To see an example of these
+                lines please click <a href="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia02.hongkiat.com%2Fmoving-css-grid-items%2Fgrid-lines.jpg&f=1">here</a>. <br> &sol;&sol; Once you imagine your layout as having those lines, you can code
+                different objects to overlap their boundaries and go into other objects while having those overlapped objects simply be moved automatically. <br> &sol;&sol; To see it clearly please look at the below example and the picture from the above
+                link.
               </p>
               <p>
                 .box&lowbar;1 &lbrace; <br> &emsp;grid&dash;column&colon; 1&sol;3&semi; <br> &emsp;grid&dash;row&colon; 1&sol;3&semi;
@@ -652,7 +787,6 @@
             </div>
           </div>
         </article>
-
       </div>
       <!-- subWrap ends -->
     </div>
